k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaner-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scaner
  template:
    metadata:
      labels:
        app: scaner
    spec:
      containers:
      - name: scaner-container
        image: ta1kin77/scaner:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
