k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaner-service
spec:
  selector:
    app: scaner
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
