k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scaner-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cyberslavs.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scaner-service
            port:
              number: 80
